--- a/front/package.json
+++ b/front/package.json
@@ -19,7 +19,8 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-web": "~0.19.13",
-    "expo-constants": "~17.0.8"
+    "expo-constants": "~17.0.8",
+    "expo-font": "~13.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
