--- a/front/package.json
+++ b/front/package.json
@@ -23,13 +23,14 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-reanimated": "^3.17.3",
     "react-native-web": "~0.19.13",
     "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "typescript": "^5.3.3",
-    "@types/react": "~18.3.12"
+    "@types/react": "~18.3.12",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
