--- a/front/package.json
+++ b/front/package.json
@@ -25,7 +25,8 @@
     "react-native": "0.76.9",
     "react-native-reanimated": "^3.17.3",
     "react-native-web": "~0.19.13",
-    "react-router-dom": "^7.5.0"
+    "react-router-dom": "^7.5.0",
+    "expo-av": "~15.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
