--- a/front/package.json
+++ b/front/package.json
@@ -16,8 +16,10 @@
     "@react-navigation/stack": "^7.2.9",
     "axios": "^1.8.4",
     "expo": "~52.0.43",
+    "expo-av": "~15.0.2",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
+    "expo-linear-gradient": "^14.0.2",
     "expo-status-bar": "~2.0.1",
     "jwt-decode": "^4.0.0",
     "react": "18.3.1",
@@ -25,8 +27,7 @@
     "react-native": "0.76.9",
     "react-native-reanimated": "^3.17.3",
     "react-native-web": "~0.19.13",
-    "react-router-dom": "^7.5.0",
-    "expo-av": "~15.0.2"
+    "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
